# Sl4shioBots

./: .gitignore  Bot.cpp  Bot.h  CMakeLists.txt  CMakeSettings.json  DefaultBehavior.cpp  DefaultBehavior.h  GameView.cpp  GameView.h  LICENSE  Main.cpp  README.md  World.cpp  World.h  linearmath.h
lib/: CMakeLists.txt
src/: Bot.cpp  Bot.h  Bot.hpp  Client.cpp  ClientRequest.cpp  ClientRequest.hpp  DefaultBehavior.cpp  DefaultBehavior.h  DefaultBehavior.hpp  GameView.cpp  GameView.h  GameView.hpp  Main.cpp  Messages.hpp  Server.cpp  Server.hpp  Utils.cpp  Utils.hpp  World.cpp  World.h  linearmath.h  poolAlloc.c  poolAlloc.h
src/base/: Bot.hpp  BotManager.hpp
src/server/: BotManager.hpp  Messages.hpp  Server.cpp  Server.hpp  Sl4shioBot.hpp  Sl4shioGameView.cpp  Sl4shioGameView.hpp  Sl4shioWorld.hpp
